--- a/app/views/public/shared/_navbar.html.erb
+++ b/app/views/public/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
+<nav class="navbar navbar-expand-lg shadow-sm sticky-top">
   <div class="container">
-    <%= link_to image_tag('/images/logo_courant_public.png', class: 'navbar-brand', width: "180", alt: "Logo"), root_url %>
+    <%= link_to image_tag('/images/a1soir_logo_white.png', class: 'navbar-brand', width: "180", alt: "Logo"), root_url %>
 
     <div class="d-flex align-items-center gap-3 order-lg-2">
       <% if ENV["ONLINE_SALES_AVAILABLE"] == "true" %>
