--- a/app/views/public/pages/la_boutique.html.erb
+++ b/app/views/public/pages/la_boutique.html.erb
@@ -23,6 +23,9 @@
           </div>
         <% end %>
         
+        <!-- Section Références -->
+        <%= render "references" %>
+        
         <!-- Informations pratiques -->
         <%= render "infos" %>
      
@@ -38,5 +41,3 @@
 
     </div>
 </div>
-
-
